--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  padding: 0;
+  padding: 0;  /*  */
   margin: 0;
   box-sizing: border-box;
 }
@@ -10,13 +10,13 @@ html {
 }
 
 .container {
-  display: flex;
-  width: 100%;
+  display: flex;   /*    */
+  width: 100%;     /*    */
   height: 100vh;
   align-items: center; /* выравнивание по вертикали */
   justify-content: center; /* выравнивание по горизонтали (если нужно) */
 
-  background-image: url("pic1.jpg");
+  background-image: url("/pic1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -60,30 +60,7 @@ img {
   height: 100px;
 }
 
-@media screen and (max-width: 1000px) {
-  .container {
-    background-image: url("/mob1.jpg");
-  }
-}
 
-@media screen and (max-width: 400px) {
-  .container {
-    background-image: url("/bg_mob.jpg");
-  }
-
-  .logo-top-right {
-    width: 20px;
-    position: absolute;
-    top: 30px;
-    right: 100px;
-    z-index: 10;
-  }
-
-  .navmenu li {
-    font-size: 10px;
-  }
-
-}
 /*
 
 @media (min-width: 481px) and (max-width: 767px) { ... }
@@ -99,3 +76,20 @@ img {
 
 
 @media (min-width: 1920px) { ... }*/
+
+
+.block-1 {
+  display: flex;
+}
+
+.bl-1 {
+
+  
+  width: 100px;
+  height: 50px;
+  background-color: blue;
+  padding: 10px;
+  margin: 10px;
+
+
+}
